set the sidebar to be in a fixed position and removed bug causing extra margin on the document

--- a/css/mattphillips/header.css
+++ b/css/mattphillips/header.css
@@ -3,7 +3,8 @@
     background-color:#F2F2F2;
     box-shadow: 2px 0px 0px #B4B3B3;
     padding-right:0px;
-    height:100vh;
+    padding-left: 0px;
+    position: fixed;
 }
 
 .header ul {
